dnl Process this file with autoconf to produce a configure script.

AC_INIT([sags], 0.2.3)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)

AC_SUBST(CXXFLAGS,$CXXFLAGS)
AC_PROG_CXX
AC_HEADER_STDC
AC_PROG_LIBTOOL

dnl Checks for libraries.
AC_CHECK_LIB([ssl], [main], ,
	AC_MSG_ERROR([
		OpenSSL library not found!
		Install it before compile this program.]))
AC_CHECK_HEADERS([openssl/ssl.h openssl/err.h openssl/md5.h], ,
	AC_MSG_ERROR([
		Basic OpenSSL headers not found!
		Without this headers the program can't be compiled.]))

AC_CHECK_LIB([util], [forkpty], ,
	AC_MSG_ERROR([
		Without this function the program can't works.]))

AC_CHECK_FUNCS([memset select getaddrinfo getnameinfo freeaddrinfo gai_strerror], ,
	AC_MSG_ERROR([
		Without this functions the program can't be compiled.]))

dnl Checks for Additional stuffs.

dnl Set PACKAGE SOURCE DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`

dnl Set PACKAGE PREFIX
if test "x${prefix}" = "xNONE"; then
  packageprefix=${ac_default_prefix}
else
  packageprefix=${prefix}
fi

dnl Set PACKAGE DATA & DOC DIR
packagedatadir=share/${PACKAGE}
packagedocdir=doc/${PACKAGE}
packagesysconfdir=/etc/${PACKAGE}

dnl Subst PACKAGE_DATA_DIR.
NO_PREFIX_PACKAGE_DATA_DIR="${packagedatadir}"
AC_SUBST(NO_PREFIX_PACKAGE_DATA_DIR)
PACKAGE_DATA_DIR="${packageprefix}/${packagedatadir}"
AC_SUBST(PACKAGE_DATA_DIR)

dnl Subst PACKAGE_DOC_DIR.
NO_PREFIX_PACKAGE_DOC_DIR="${packagedocdir}"
AC_SUBST(NO_PREFIX_PACKAGE_DOC_DIR)
PACKAGE_DOC_DIR="${packageprefix}/${packagedocdir}"
AC_SUBST(PACKAGE_DOC_DIR)

dnl Subst PACKAGE_SYSCONF_DIR.
PACKAGE_SYSCONF_DIR="${packagesysconfdir}"
AC_SUBST(PACKAGE_SYSCONF_DIR)

AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${packageprefix}/${packagedatadir}", [Data dir])
AC_DEFINE_UNQUOTED(PACKAGE_DOC_DIR, "${packageprefix}/${packagedocdir}", [Documentation dir])
AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}", [Source dir])
AC_DEFINE_UNQUOTED(PACKAGE_SYSCONF_DIR, "${packagesysconfdir}", [System config dir])

AC_OUTPUT([
Makefile
src/Makefile
tools/Makefile
doc/Makefile
])

