## Process this file with automake to produce Makefile.in

sags_CXXFLAGS = \
		-Wall \
		-g    \
		-O2

bin_PROGRAMS = sags

sags_SOURCES = \
	       Client.cpp   \
	       Config.cpp   \
	       Log.cpp      \
	       Loop.cpp     \
	       Main.cpp     \
	       Network.cpp  \
	       Packet.cpp   \
	       Process.cpp  \
	       Program.cpp  \
	       Protocol.cpp \
	       Utils.cpp    \
	       Client.hpp   \
	       Config.hpp   \
	       List.hpp     \
	       Log.hpp      \
	       Loop.hpp     \
	       Main.hpp     \
	       Network.hpp  \
	       Packet.hpp   \
	       Process.hpp  \
	       Protocol.hpp \
	       Utils.hpp

