## Process this file with automake to produce Makefile.in

sags_CXXFLAGS = \
		-Wall \
		-g    \
		-O2

bin_PROGRAMS = sags

sags_SOURCES = \
	       Channel.cpp  \
	       Channel.hpp  \
	       Client.cpp   \
	       Client.hpp   \
	       Config.cpp   \
	       Config.hpp   \
	       List.hpp     \
	       Log.cpp      \
	       Log.hpp      \
	       Loop.cpp     \
	       Loop.hpp     \
	       Main.cpp     \
	       Main.hpp     \
	       Network.cpp  \
	       Network.hpp  \
	       Packet.cpp   \
	       Packet.hpp   \
	       Process.cpp  \
	       Process.hpp  \
	       ProcTree.cpp \
	       ProcTree.hpp \
	       Program.cpp  \
	       Protocol.cpp \
	       Protocol.hpp \
	       Utils.cpp    \
	       Utils.hpp

